<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/searchBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Search here..."
        android:importantForAutofill="no"
        android:padding="12dp"
        android:background="@drawable/search_bar_bg"
        android:drawableStart="@drawable/ic_search"
        android:layout_margin="16dp"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="HardcodedText" />

    <RadioGroup
        android:id="@+id/segmentControl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/searchBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="16dp">

        <RadioButton
            android:id="@+id/mapMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map"
            android:checked="true"
            android:textSize="16sp"
            android:padding="8dp" />

        <RadioButton
            android:id="@+id/transportMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transport"
            android:textSize="16sp"
            android:padding="8dp" />

        <RadioButton
            android:id="@+id/hybridMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hybrid"
            android:textSize="16sp"
            android:padding="8dp" />
    </RadioGroup>

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/segmentControl"
        app:layout_constraintBottom_toTopOf="@id/buttonContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="32dp">

        <ImageButton
            android:id="@+id/currentLocationButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:src="@drawable/ic_location"
            android:contentDescription="@string/current_location"
            android:layout_marginEnd="8dp" />

        <ImageButton
            android:id="@+id/routeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:src="@drawable/ic_route"
            android:contentDescription="@string/route"
            android:layout_marginStart="8dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
